# crispr_rl

./: README.md  ablations.py  bandit.py  baseline.py  client.py  composite.py  config.py  context.py  crispr_rl_ui.html  crispr_rl_ui.jsx  default_config.yaml  design_results.csv  design_results.json  env.py  gc_content.py  harness.py  loaders.py  logging.py  metrics_card.py  off_target.py  pam_scanner.py  pyproject.toml  reviewpackets.md  run_crispr_design.py  run_tests.py  schemas.py  seeds.py  server.py  stress_tests.py  test_api_schemas.py  test_baseline_scorer.py  test_features.py  test_integration.py  test_off_target.py  test_pam_scanner.py  test_rl_env.py  thermo_proxy.py  trainer.py
